@@ -1,0 +1,5 @@
+<html>
+<body>
+Wrappers may use some keyword and positional arguments from rule/checkpoint sections implicitly.
+</body>
+</html>
