@@ -17,6 +17,9 @@ Features:
 - Inspection: Warn users if they have callable arguments in sections that does not expect it (see #198)
 - Inspection: Warn users if they have keyword arguments in sections that does not expect it (see #196)
 - Inspection: Warn about usage of rule/checkpoint/subworkflow objects as arguments instead of one of its fields (see #257)
+- Inspection: Warn about missed arguments needed for wrapper (see #18)
+- Resolve\completion for wrapper path and for arguments that wrapper use (see #18)
+- Wrapper section documentation popup (see #18)
 
 Fixed:
 - Completion does not suggest top-level keywords in comments (see #178)
